--- a/main.html
+++ b/main.html
@@ -8,6 +8,58 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<form method="post">
+		<label for="name">Name:</label>
+		<input type="text" id=name placeholder=Name required>
+		<br>
+		
+		<label for="email">Email:</label>
+		<input type="email" id=email placeholder=Email required>
+		<br>
+		
+		<label >Gender:</label>
+		<label for="gender_m">Male:</label>
+		<input type="radio" id=gender_m name=Gender required>
+		
+		
+		<label for="gender_f">female:</label>
+		<input type="radio" id=gender_f name=Gender required>
+		<br>
+		
+		<label for="cars">Car Brands:</label>
+		<select id=cars placeholder="" required>
+			<option>--Please choose an option--</option>
+			<option>Audi</option>
+			<option>Bmw</option>
+			<option>Benz</option>
+		</select>
+		<br>
+		
+		<label for="age">Age:</label>
+		<input type="number" id=age placeholder=Age required>
+		<br>
+		
+		<label for="dob">DOB:</label>
+		<input type="date" id=dob  required>
+		<br>
+		
+		
+		<label for="tel">Phone Number:</label>
+		<input type="tel" id=tel placeholder=xxx-xxx-xxxxx>
+		<br>
+		
+		<label for="password">Password:</label>
+		<input type="password" id=password placeholder=Password required>
+		<br>
+		
+		<label for="tos">I agree to the TOS:</label>
+		<input type="checkbox" id=tos  required>
+		<br>
+
+		<button type="submit">Submit</button>
+		
+		
+	</form>
     <script type="text/javascript" src="./script.js">
 </script>
 
