--- a/main.html
+++ b/main.html
@@ -19,11 +19,11 @@
 		
 		<label >Gender:</label>
 		<label for="gender_m">Male:</label>
-		<input type="radio" id=gender_m name=Gender required>
+		<input type="radio" id=gender_m name=gender required>
 		
 		
 		<label for="gender_f">female:</label>
-		<input type="radio" id=gender_f name=Gender required>
+		<input type="radio" id=gender_f name=gender required>
 		<br>
 		
 		<label for="cars">Car Brands:</label>
